# meridian-mcp

./: .gitignore  Cargo.toml  DESIGN.md  README.md  TODO.md  build.rs  cursorrules  install.sh  release.yml
.github/workflows/: release.yml
release-notes/: v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md
src/: agent.rs  cache.rs  config.rs  lib.rs  main.rs  models.rs
src/scanner/: adrs.rs  documents.rs  imports.rs  mod.rs  patterns.rs  walker.rs
tests/: scanner_test.rs
