[package]
name        = "meridian-mcp"
version     = "0.2.0"
edition     = "2021"
build       = "build.rs"
description = "Meridian MCP — local architecture assistant MCP server and CLI"
license     = "MIT"
repository  = "https://github.com/resolvingarchitecture/meridian-mcp"
keywords    = ["mcp", "architecture", "code-review", "ai"]

[lib]
name = "meridian_mcp"
path = "src/lib.rs"

[[bin]]
name = "meridian-mcp"
path = "src/main.rs"

[dependencies]
# MCP protocol
rmcp            = { version = "0.1",  features = ["server", "transport-io", "macros"] }

# Async runtime
tokio           = { version = "1",    features = ["full"] }

# Serialization
serde           = { version = "1",    features = ["derive"] }
serde_json      = "1"
schemars        = { version = "0.8",  features = ["uuid1"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# File system traversal — respects .gitignore automatically
ignore          = "0.4"
walkdir         = "2"

# Import graph / dependency analysis
petgraph        = "0.6"

# Tree-sitter for import parsing (language-agnostic, handles broken syntax)
tree-sitter                = "0.22"
tree-sitter-typescript     = "0.21"
tree-sitter-javascript     = "0.21"
tree-sitter-python         = "0.21"
tree-sitter-java           = "0.21"

# HTTP client for backend API calls
reqwest         = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Embedded KV cache — persists arch model to ~/.cache/meridian/
sled            = "0.34"

# Utilities
anyhow          = "1"
dirs            = "5"
rayon           = "1"           # parallel file scanning
humantime       = "2"
sha2            = "0.10"        # directory structure hashing for cache keys
hex             = "0.4"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding     = "2"

[dev-dependencies]
assert_fs = "1"